--- a/README.adoc
+++ b/README.adoc
@@ -1,5 +1,7 @@
-# DiplomaThesis  
+# 🕮 DiplomaThesis  
 By @PHCaesar
+<img src="https://img.shields.io/badge/docker%20build-automated-066da5">
+<img src="https://img.shields.io/badge/docs-passing-brightgreen">
 
 This project aims to provide a lightweight preconfiguration for the diplomathesis.
 
